{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 366,
  "lineage": "8dece3a2-c244-0ccf-4efe-f43d05884275",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sb_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef52e4698098d9b4",
            "association_id": "eipassoc-079dbf1e9a152cec5",
            "domain": "vpc",
            "id": "eipalloc-0ef52e4698098d9b4",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0cc948e95b416c9c2",
            "private_dns": "ip-10-0-1-188.us-west-1.compute.internal",
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-184-169-170-43.us-west-1.compute.amazonaws.com",
            "public_ip": "184.169.170.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:204848234318:internet-gateway/igw-099956661b561e2fd",
            "id": "igw-099956661b561e2fd",
            "owner_id": "204848234318",
            "vpc_id": "vpc-089d2731ff633affe"
          },
          "dependencies": [
            "aws_vpc.sb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "wp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-099956661b561e2fd",
            "id": "r-rtb-0325af72f0eb67bc31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0325af72f0eb67bc3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.wp_route_table",
            "aws_vpc.sb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:204848234318:route-table/rtb-0325af72f0eb67bc3",
            "id": "rtb-0325af72f0eb67bc3",
            "owner_id": "204848234318",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099956661b561e2fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089d2731ff633affe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be4d2936e320d45c",
            "route_table_id": "rtb-0325af72f0eb67bc3",
            "subnet_id": "subnet-015dabfaaedd793eb"
          },
          "dependencies": [
            "aws_route_table.wp_route_table",
            "aws_subnet.wp_subnet_1",
            "aws_vpc.sb_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be4d2936e320d45c",
            "route_table_id": "rtb-0325af72f0eb67bc3",
            "subnet_id": "subnet-015dabfaaedd793eb"
          },
          "dependencies": [
            "aws_route_table.wp_route_table",
            "aws_subnet.wp_subnet_1",
            "aws_vpc.sb_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029fa99088390a485",
            "route_table_id": "rtb-0325af72f0eb67bc3",
            "subnet_id": "subnet-0f5fd52f827eae38b"
          },
          "dependencies": [
            "aws_route_table.wp_route_table",
            "aws_subnet.wp_subnet_2",
            "aws_vpc.sb_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029fa99088390a485",
            "route_table_id": "rtb-0325af72f0eb67bc3",
            "subnet_id": "subnet-0f5fd52f827eae38b"
          },
          "dependencies": [
            "aws_route_table.wp_route_table",
            "aws_subnet.wp_subnet_2",
            "aws_vpc.sb_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:204848234318:security-group/sg-0a48a8d13583f8b61",
            "description": "EFS security group",
            "egress": [],
            "id": "sg-0a48a8d13583f8b61",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "In TCP EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFSSecurityGroup",
            "name_prefix": "",
            "owner_id": "204848234318",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089d2731ff633affe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:204848234318:security-group/sg-0f99059fe57658bed",
            "description": "EKS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic to the Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f99059fe57658bed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "In TCP 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "In TCP 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic from within the security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "EKSSecurityGroup",
            "name_prefix": "",
            "owner_id": "204848234318",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089d2731ff633affe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:204848234318:subnet/subnet-015dabfaaedd793eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015dabfaaedd793eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "204848234318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wpSubnet1"
            },
            "tags_all": {
              "Name": "wpSubnet1"
            },
            "vpc_id": "vpc-089d2731ff633affe"
          },
          "dependencies": [
            "aws_vpc.sb_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:204848234318:subnet/subnet-0f5fd52f827eae38b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5fd52f827eae38b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "204848234318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wpSubnet2"
            },
            "tags_all": {
              "Name": "wpSubnet2"
            },
            "vpc_id": "vpc-089d2731ff633affe"
          },
          "dependencies": [
            "aws_vpc.sb_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:204848234318:vpc/vpc-089d2731ff633affe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a6fb70c61a213f3",
            "default_route_table_id": "rtb-09713ccf2175b9bec",
            "default_security_group_id": "sg-04bad4ddaf2545541",
            "dhcp_options_id": "dopt-00d37e64",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089d2731ff633affe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09713ccf2175b9bec",
            "owner_id": "204848234318",
            "tags": {
              "Name": "sbVPC"
            },
            "tags_all": {
              "Name": "sbVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mysql-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/mysql-service",
            "metadata": [
              {
                "generation": 0,
                "name": "mysql-service",
                "namespace": "default",
                "resource_version": "3407",
                "uid": "3d9105f4-be55-4a41-9724-1d1b7200454e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.77.172",
                "cluster_ips": [
                  "172.20.77.172"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "mysql",
                    "node_port": 0,
                    "port": 3306,
                    "protocol": "TCP",
                    "target_port": "3306"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "mysql"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.wp1",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/ingress-1",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/issuer": "selfsigned-issuer"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "ingress-1",
                "namespace": "default",
                "resource_version": "11917810",
                "uid": "2463da2c-3142-4cf4-845a-2dd105a926cd"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "domain1.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "wordpress-1",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "domain1.com"
                    ],
                    "secret_name": "domain-tls-1"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-default-ingressn-0d7fddaeea-a8e3a610f90f1fd4.elb.us-west-1.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_secretsmanager_secret.mysql_root",
            "data.aws_secretsmanager_secret.mysql_user1",
            "data.aws_secretsmanager_secret_version.mysql_root",
            "data.aws_secretsmanager_secret_version.mysql_user1",
            "kubernetes_service.mysql-service",
            "module.wp1.kubernetes_deployment.wordpress",
            "module.wp1.kubernetes_persistent_volume_claim.wp-content-cl",
            "module.wp1.kubernetes_service.wordpress"
          ]
        }
      ]
    },
    {
      "module": "module.wp1",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/wordpress-1",
            "metadata": [
              {
                "generation": 0,
                "name": "wordpress-1",
                "namespace": "default",
                "resource_version": "11917805",
                "uid": "12909934-c4ed-408e-9b2f-420c8ea410fd"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.192.136",
                "cluster_ips": [
                  "172.20.192.136"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "wordpress-1"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_secretsmanager_secret.mysql_root",
            "data.aws_secretsmanager_secret.mysql_user1",
            "data.aws_secretsmanager_secret_version.mysql_root",
            "data.aws_secretsmanager_secret_version.mysql_user1",
            "kubernetes_service.mysql-service",
            "module.wp1.kubernetes_deployment.wordpress",
            "module.wp1.kubernetes_persistent_volume_claim.wp-content-cl"
          ]
        }
      ]
    }
  ]
}